# measure_handler

./: .gitignore  LICENSE  pyproject.toml  readme.md
client/: __main__.py  client.py
measureh/: __main__.py  database.py  parser.py
mfa_parser/: __main__.py
mfac/: __main__.py  client.py  parser.py
server/: __main__.py
sigr/: __init__.py  __main__.py  client.py  database.py  parser.py
tests/: test_hello.py
tools/: experimental.py  transmitter.py
