[tool.poetry]
name = "measureh"
version = "0.1.0"
description = ""
authors = ["Nakajima Kazuki <nakajima.k0301@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"

[tool.poetry.scripts]
server = "measureh:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
