[tool.poetry]
name = "sigr"
version = "0.1.0"
description = ""
authors = ["Nakajima Kazuki <nakajima.k0301@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
pymysql = "^0.9.3"

[tool.poetry.scripts]

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
